--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["kesha1225"]
 python = "^3.7"
 umongo = "^2.2.0"
 motor = "^2.1.0"
+"vk.py" = "1.0.0a4"
+python-dotenv = "^0.10.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
